add     jvmArgs = ['--enable-preview']